--- a/src/App.css
+++ b/src/App.css
@@ -19,3 +19,19 @@
     color: #fff;
     cursor: pointer;
 }
+
+.square {
+    width: 300px;
+    height: 300px;
+    border: 1px solid black;
+}
+
+.ball {
+    position: relative;
+    width: 40px;
+    height: 40px;
+    left: 0;
+    top: 0;
+    background-color: blueviolet;
+    border-radius: 50%;
+}
